<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingTop="@dimen/dimen_10"
                android:paddingBottom="@dimen/dimen_10">

    <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_rect_white"
            android:gravity="center"
            android:orientation="vertical">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cc_orane_player"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_12"
                android:paddingRight="@dimen/dimen_10"
                android:paddingBottom="@dimen/dimen_12">

            <TextView
                    style="@style/robotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_centerVertical="true"
                    android:text="@string/create_new_playlist"
                    android:textColor="@color/white"/>

            <ImageView
                    android:id="@+id/iv_cross"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_cross"/>
        </RelativeLayout>

        <EditText
                android:id="@+id/etName"
                style="@style/robotoMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_10"
                android:includeFontPadding="false"
                android:layout_marginBottom="@dimen/margin_pad_14"
                android:background="@drawable/rounded_border_edittext"
                android:gravity="left"
                android:hint="@string/hint_playlist_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_10"
                android:paddingBottom="@dimen/dimen_10"
                android:textColor="@color/cc_text_color"
                android:textColorHint="@color/cc_text_grey"
                android:textSize="@dimen/text_size_medium"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="right"
                android:orientation="horizontal"
                android:visibility="visible">

            <TextView
                    android:id="@+id/tvCreatePlayList"
                    style="@style/robotoMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:background="@drawable/layout_bg_dark"
                    android:drawablePadding="@dimen/dimen_8"
                    android:gravity="center"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:text="@string/save_playlist"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_15"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>